--- a/src/collective/contact/mailaction/locales/de/LC_MESSAGES/collective.contact.mailaction.po
+++ b/src/collective/contact/mailaction/locales/de/LC_MESSAGES/collective.contact.mailaction.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-03-18 09:47+0000\n"
-"PO-Revision-Date: 2016-03-18 10:42+0100\n"
-"Last-Translator: Rene Jochum <rene@webmeisterei.com>\n"
+"POT-Creation-Date: 2016-03-18 11:49+0000\n"
+"PO-Revision-Date: 2016-03-18 12:50+0100\n"
+"Last-Translator: Rene Jochum <info@smile4.at>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -21,10 +21,10 @@ msgstr ""
 msgid "button_cancel"
 msgstr "Abbrechen"
 
-#. Default: "Save"
+#. Default: "Send"
 #: ../browser/actions/mail.py:98
-msgid "button_save"
-msgstr "Speichern"
+msgid "button_send"
+msgstr "Senden"
 
 #. Default: "Reply To:"
 #: ../browser/actions/mail.py:48
@@ -60,4 +60,3 @@ msgstr "${number} E-Mails verschickt."
 #: ../browser/actions/mail.py:106
 msgid "status_parse_error"
 msgstr "Fehler beim auslesen des Formulars."
-
