--- a/src/collective/contact/mailaction/locales/collective.contact.mailaction.pot
+++ b/src/collective/contact/mailaction/locales/collective.contact.mailaction.pot
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2016-09-29 10:41+0000\n"
+"POT-Creation-Date: 2016-11-17 14:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,7 +57,7 @@ msgstr ""
 msgid "label_mail_batch"
 msgstr ""
 
-#. Default: "Send ${number} E-Mails."
+#. Default: "Sent ${number} E-Mails."
 #: ../browser/actions/mail.py:166
 msgid "status_mail_send"
 msgstr ""
