--- a/src/collective/contact/mailaction/locales/fr/LC_MESSAGES/collective.contact.mailaction.po
+++ b/src/collective/contact/mailaction/locales/fr/LC_MESSAGES/collective.contact.mailaction.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-09-29 10:41+0000\n"
+"POT-Creation-Date: 2016-11-17 14:52+0000\n"
 "PO-Revision-Date: 2016-10-04 16:18+0200\n"
 "Last-Translator: Rene Jochum <info@smile4.at>\n"
 "Language-Team: \n"
@@ -56,7 +56,7 @@ msgstr "Aide texte"
 msgid "label_mail_batch"
 msgstr "Envoie un courriel"
 
-#. Default: "Send ${number} E-Mails."
+#. Default: "Sent ${number} E-Mails."
 #: ../browser/actions/mail.py:166
 msgid "status_mail_send"
 msgstr "${number} courriels envoyés."
@@ -65,3 +65,4 @@ msgstr "${number} courriels envoyés."
 #: ../browser/actions/mail.py:111
 msgid "status_parse_error"
 msgstr "Erreur lors du traitement du formulaire."
+
