--- a/src/collective/contact/mailaction/locales/sl/LC_MESSAGES/collective.contact.mailaction.po
+++ b/src/collective/contact/mailaction/locales/sl/LC_MESSAGES/collective.contact.mailaction.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-09-29 10:41+0000\n"
+"POT-Creation-Date: 2016-11-17 14:52+0000\n"
 "PO-Revision-Date: 2016-10-01 23:36+0200\n"
 "Last-Translator: Rene Jochum <info@smile4.at>\n"
 "Language-Team: \n"
@@ -56,7 +56,7 @@ msgstr "Restrukturirano besedilo lahko uporabite tukaj."
 msgid "label_mail_batch"
 msgstr "Pošlji sporočilo"
 
-#. Default: "Send ${number} E-Mails."
+#. Default: "Sent ${number} E-Mails."
 #: ../browser/actions/mail.py:166
 msgid "status_mail_send"
 msgstr "Pošlji sporočila."
@@ -65,3 +65,4 @@ msgstr "Pošlji sporočila."
 #: ../browser/actions/mail.py:111
 msgid "status_parse_error"
 msgstr "Poskus razčlenitve oblike ni uspel."
+
